[tool.poetry]
name = "gwardiahub"
version = "0.0.1"
description = "All-in-one webite for school assistance and efficient management of Gwardia activities."
authors=["Members of Gwardia"]
license = "GPL-3.0"
readme = "README.md"
homepage="https://github.com/Gwardia-Czapli/GwardiaHub"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"

[tool.poetry.dev-dependencies]
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
