[tool.poetry]
name = "gwardiahub"
version = "0.0.1"
description = "All-in-one webite for school assistance and efficient management of Gwardia activities."
authors=["Members of Gwardia"]
license = "GPL-3.0"
readme = "README.md"
homepage="https://github.com/Gwardia-Czapli/GwardiaHub"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
fontawesomefree = "^6.5.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
whitenoise = {extras = ["brotil"], version = "^6.6.0"}
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
django-environ = "^0.11.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
