[tool.poetry]
name = "gwardiahub"
version = "0.0.1"
description = "All-in-one webite for school assistance and efficient management of Gwardia activities."
authors=["Members of Gwardia"]
license = "GPL-3.0"
readme = "README.md"
homepage="https://github.com/Gwardia-Czapli/GwardiaHub"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
fontawesomefree = "^6.5.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
whitenoise = {extras = ["brotil"], version = "^6.6.0"}
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
django-environ = "^0.11.2"

[tool.poetry.dev-dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
